--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,13 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # SPA fallback: serve index.html for client-side routes
+  # Fallback for React Router (SPA)
   location / {
     try_files $uri /index.html;
   }
 
-  # Optional: tighter static handling
-  location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+  # Optional cache rules for static assets
+  location ~* \.(?:js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
     try_files $uri =404;
     access_log off;
     add_header Cache-Control "public, max-age=31536000, immutable";
