--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Miniglow",
-  "name": "Miniglow by Shay",
+  "short_name": "MiniGlow",
+  "name": "MiniGlow by Shay — Soins Beauté Naturels",
   "icons": [
     {
       "src": "faviconn.ico",
