--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,13 @@
 {
-  "short_name": "Mini Glow by shay",
-  "name": "Create React App Sample",
+  "short_name": "MiniGlowbyShay",
+  "name": "MiniGlowbyShay | Soins visage & beauté",
   "icons": [
-    {
-      "src": "faviconn.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+    { "src": "faviconn.ico", "sizes": "64x64 32x32 24x24 16x16", "type": "image/x-icon" },
+    { "src": "logo192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "logo512.png", "sizes": "512x512", "type": "image/png" }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#f6c1c1",
   "background_color": "#ffffff"
 }
