--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,13 @@
 {
-  "short_name": "MiniGlowbyShay",
-  "name": "MiniGlowbyShay | Soins visage & beauté",
+  "short_name": "MiniGlow",
+  "name": "MiniGlow by Shay",
   "icons": [
-    { "src": "faviconn.ico", "sizes": "64x64 32x32 24x24 16x16", "type": "image/x-icon" },
-    { "src": "logo192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "logo512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "favicon.ico", "sizes": "64x64 32x32 24x24 16x16", "type": "image/x-icon" },
+    { "src": "logo192.png", "type": "image/png", "sizes": "192x192" },
+    { "src": "logo512.png", "type": "image/png", "sizes": "512x512" }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#f6c1c1",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff"
 }
