--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
