--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+REACT_APP_API_URL=https://api.miniglowbyshay.cloud
 REACT_APP_GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com
 REACT_APP_SKIP_TOKEN_CHECK=true
